--- a/checkin.html
+++ b/checkin.html
@@ -177,9 +177,9 @@
 <script>
 
     // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
-    const WEB_APP_MEMBER_URL = ' ';
-    const WEB_APP_URL = ' ';
-    const LIFF_ID = ' '; // Liff ID
+    const WEB_APP_MEMBER_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec';
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzSH8q9ukiV-LXYucTrhSpMaOrdYSIhZhaSbZ5F1wDg1GknyYUroZbUm9mKgQB__5rt/exec';
+    const LIFF_ID = '2006631944-nj5EdZZj'; // Liff ID
 
     // ฟังก์ชันนี้จะถูกเรียกใช้เมื่อโหลดหน้าเว็บเสร็จสมบูรณ์
     window.onload = async function () {
