--- a/history.html
+++ b/history.html
@@ -56,8 +56,8 @@
     <script>
 
         // URL ของ Web App ที่คุณ Deploy ไว้
-        const WEB_APP_URL = ' ';
-        const LIFF_ID = ' '; // Liff ID
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzSH8q9ukiV-LXYucTrhSpMaOrdYSIhZhaSbZ5F1wDg1GknyYUroZbUm9mKgQB__5rt/exec';
+        const LIFF_ID = '2006631944-Mmo9nppD'; // Liff ID
 
         // จำนวนรายการที่จะแสดงต่อหน้า
         const itemsPerPage = 20;
