--- a/register.html
+++ b/register.html
@@ -55,9 +55,9 @@
 <script>
 
 	// URL ของ Web App ที่ใช้ในการลงทะเบียน
-    const WEB_APP_URL = ' '; 
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzSH8q9ukiV-LXYucTrhSpMaOrdYSIhZhaSbZ5F1wDg1GknyYUroZbUm9mKgQB__5rt/exec'; 
     // LIFF ID สำหรับการเชื่อมต่อกับ LINE
-    const LIFF_ID = ' '; // LIFF ID
+    const LIFF_ID = '2006631944-6E9e155O'; // LIFF ID
 
 // ฟังก์ชันเริ่มต้น LIFF SDK เมื่อโหลดหน้าเว็บ
 window.onload = function () {
