--- a/profileedit.html
+++ b/profileedit.html
@@ -61,8 +61,8 @@
 
     <script>
         // URL ของ Web App และ LIFF ID
-        const WEB_APP_URL = ' ';
-        const LIFF_ID = ' '; // LIFF ID
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec';
+        const LIFF_ID = '2006631944-WNM82440'; // LIFF ID
 
         let latestData = {};
 
