--- a/leave.html
+++ b/leave.html
@@ -137,7 +137,7 @@
         // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
         const WEB_MEMBER_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec'; 
         const WEB_APP_Leave_URL = 'https://script.google.com/macros/s/AKfycbzOR0FAB6yjtS7y7qJ3BOvnVcjJ90KcQTv6GRxewb0C-tW8ukiExvIj6IbGDI_qzn51IA/exec'; 
-        const LIFF_ID = ' '; // Liff ID
+        const LIFF_ID = '2006631944-y3BL0NNQ'; // Liff ID
 
         // เริ่มการทำงานเมื่อโหลดหน้าเว็บ
         window.onload = async function () {
