--- a/ot.html
+++ b/ot.html
@@ -119,8 +119,8 @@
     </div>
     <script>
         // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
-        const WEB_MEMBER_APP_URL = ' '; 
-        const WEB_APP_OT_URL = ' '; 
+        const WEB_MEMBER_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec'; 
+        const WEB_APP_OT_URL = 'https://script.google.com/macros/s/AKfycby49HCdJ3ygUdguf8t3HH7KnGYu7ZKdWInvNz873jJfs-O2HiLLMSfYdApABSZL2dS-/exec'; 
         const LIFF_ID = ' '; // Liff ID
 
         // เริ่มการทำงานเมื่อโหลดหน้าเว็บ
