--- a/ot.html
+++ b/ot.html
@@ -121,7 +121,7 @@
         // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
         const WEB_MEMBER_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec'; 
         const WEB_APP_OT_URL = 'https://script.google.com/macros/s/AKfycby49HCdJ3ygUdguf8t3HH7KnGYu7ZKdWInvNz873jJfs-O2HiLLMSfYdApABSZL2dS-/exec'; 
-        const LIFF_ID = ' '; // Liff ID
+        const LIFF_ID = '2006631944-vxYeg00L'; // Liff ID
 
         // เริ่มการทำงานเมื่อโหลดหน้าเว็บ
         window.onload = async function () {
