--- a/register.html
+++ b/register.html
@@ -328,7 +328,7 @@ submitBtn.addEventListener('click', async (event) => {
                     Swal.showLoading();
                 }
             });
-
+	    console.log(obj);
             let response = await fetch(url, {
                 method: "POST",
                 postData: JSON.stringify(obj) // ส่งข้อมูลในรูปแบบ JSON ไปยัง Web App
