--- a/register.html
+++ b/register.html
@@ -42,8 +42,8 @@
                     <input type="text" class="input-field w-full border border-slate-300 p-2 text-md rounded-lg" id="keynumberId" placeholder="รหัสพนักงาน" name="keynumberId" required>
                 </div>
                 <div class="mb-6">
-                    <!-- ฟิลด์สำหรับใส่ตำแหน่ง -->
-                    <input type="text" class="input-field w-full border border-slate-300 p-2 text-md rounded-lg" id="keynumber2Id" placeholder="ตำแหน่ง" name="keynumber2Id" required>
+                    <!-- ฟิลด์สำหรับใส่ CHAT_ID -->
+                    <input type="text" class="input-field w-full border border-slate-300 p-2 text-md rounded-lg" id="keynumber2Id" placeholder="CHAT_ID" name="keynumber2Id" required>
                 </div>
 		<div class="mb-6">  <!-- ฟิลด์สำหรับใส่แผนก -->
 		    <select class="input-field w-full border border-slate-300 p-2 text-md rounded-lg" id="departmentId" name="departmentId" required>
