--- a/register.html
+++ b/register.html
@@ -66,7 +66,8 @@
 <script>
 
 	// URL ของ Web App ที่ใช้ในการลงทะเบียน 
-    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbya4LdTm16q8CzzHI-3slvoxwj-HbgPTxXf-sg22hTsYa61QtxGNgt6noHVXYpBo7aC/exec'; 
+   // const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbya4LdTm16q8CzzHI-3slvoxwj-HbgPTxXf-sg22hTsYa61QtxGNgt6noHVXYpBo7aC/exec'; 
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec';
     // LIFF ID สำหรับการเชื่อมต่อกับ LINE
     const LIFF_ID = '2006631944-6E9e155O'; // LIFF ID
 
@@ -186,7 +187,7 @@ async function sendFlexMessage() {
                                 contents: [
                                     {
                                         type: 'text',
-                                        text: 'อีเมล',
+                                        text: 'CHAT_ID',
                                         size: 'sm',
                                         color: '#555555',
                                         flex: 1
@@ -194,6 +195,27 @@ async function sendFlexMessage() {
                                     {
                                         type: 'text',
                                         text: document.getElementById('keynumber2Id').value,
+                                        size: 'sm',
+                                        color: '#111111',
+                                        align: 'end',
+                                        flex: 2
+                                    }
+                                ]
+                            },
+                            {
+                                type: 'box',
+                                layout: 'horizontal',
+                                contents: [
+                                    {
+                                        type: 'text',
+                                        text: 'หน่วยงาน',
+                                        size: 'sm',
+                                        color: '#555555',
+                                        flex: 1
+                                    },
+                                    {
+                                        type: 'text',
+                                        text: document.getElementById('departmentId').value,
                                         size: 'sm',
                                         color: '#111111',
                                         align: 'end',
@@ -231,7 +253,8 @@ let imgPreview = document.getElementById("preview");
 let userlineIdInput = document.getElementById("userlineId");
 let nameIdInput = document.getElementById("nameId");
 let keynumberIdInput = document.getElementById("keynumberId");
-let keynumber2IdInput = document.getElementById("keynumber2Id");
+let keynumber2IdInput = document.getElementById("keynumber2Id"); // CHAT_ID from Telegram
+let deptIdInput = document.getElementById("departmentId");
 let submitBtn = document.getElementById("submitBtn");
 
 // ฟังก์ชันสำหรับแปลงไฟล์เป็น Base64
@@ -272,7 +295,7 @@ function validateForm() {
     const keynumberId = keynumberIdInput.value.trim();
     const keynumber2Id = keynumber2IdInput.value.trim();
 
-    if (userlineId === '' || nameId === '' || keynumberId === '' || keynumber2Id === '') {
+    if (userlineId === '' || nameId === '' || keynumberId === '' || keynumber2Id === '' || deptIdInput.value === "") {
         return false;
     }
 
@@ -312,7 +335,8 @@ submitBtn.addEventListener('click', async (event) => {
                     userlineId: userlineIdInput.value,
                     nameId: nameIdInput.value,
                     keynumberId: keynumberIdInput.value,
-                    keynumber2Id: keynumber2IdInput.value
+                    keynumber2Id: keynumber2IdInput.value ,
+		    deptID : deptIdInput.value
                 };
             } else { // ถ้าไม่มีการอัพโหลดรูปภาพ ใช้ภาพเริ่มต้นแทน
                 let response = await fetch("https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png");
@@ -326,7 +350,8 @@ submitBtn.addEventListener('click', async (event) => {
                     userlineId: userlineIdInput.value,
                     nameId: nameIdInput.value,
                     keynumberId: keynumberIdInput.value,
-                    keynumber2Id: keynumber2IdInput.value
+                    keynumber2Id: keynumber2IdInput.value,
+		    deptID : deptIdInput.value
                 };
             }
 
@@ -357,7 +382,7 @@ submitBtn.addEventListener('click', async (event) => {
                     liff.closeWindow(); // ปิดหน้าต่าง LIFF เมื่อบันทึกข้อมูลสำเร็จ
                 }
             });
-            sendFlexMessage(); // ส่งข้อความ Flex หลังจากบันทึกข้อมูลสำเร็จ
+           // sendFlexMessage(); // ส่งข้อความ Flex หลังจากบันทึกข้อมูลสำเร็จ เปลี่ยนใช้ appscript ในการส่ง message to telegram
             
         } catch (error) {
             Swal.fire({
