--- a/register.html
+++ b/register.html
@@ -242,8 +242,8 @@ async function sendFlexMessage() {
             }
         }
     };
-
-    await liff.sendMessages([flexMessage]); // ส่งข้อความ Flex ผ่าน LIFF
+  // comment เพื่อไม่ต้องส่งข้อความผ่าน Flex
+  //  await liff.sendMessages([flexMessage]); // ส่งข้อความ Flex ผ่าน LIFF
 }
 
 // กำหนดตัวแปรสำหรับใช้ในฟังก์ชันต่างๆ
