--- a/register.html
+++ b/register.html
@@ -372,7 +372,7 @@ submitBtn.addEventListener('click', async (event) => {
             });
 
             let data = await response.text();
-
+	    console.log(data)
             Swal.fire({
                 title: 'สำเร็จ!',
                 text: 'บันทึกข้อมูลของคุณเรียบร้อย!',
