--- a/register.html
+++ b/register.html
@@ -366,16 +366,12 @@ submitBtn.addEventListener('click', async (event) => {
                 }
             });
 	    console.log(obj);
-		let response = await fetch(url, {
-		method: "POST",
-		headers: {
-		"Content-Type": "application/json"
-		},
-		body: JSON.stringify(obj)
-		});
-		
-		let responseText = await response.text(); // อ่านแค่ครั้งเดียว
-		console.log(responseText); // แสดงข้อความใน console
+		 let response = await fetch(url, {
+                        method: "POST",
+                        body: JSON.stringify(obj) // ส่งข้อมูลในรูปแบบ JSON ไปยัง Web App
+                    });
+
+                    let data = await response.text();
 
             Swal.fire({
                 title: 'สำเร็จ!',
