--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
                 <div class="flex flex-col">
                 <div class="mb-4">
                     <!-- ฟิลด์สำหรับใส่ Line ID -->
-                    <input type="text" class="input-field w-full  bg-slate-200 p-2 text-slate-500 text-sm text-center rounded-lg" id="userlineId" placeholder="lineId" name="userlineId" >
+                    <input type="text" class="input-field w-full  bg-slate-200 p-2 text-slate-500 text-sm text-center rounded-lg" id="userlineId" placeholder="lineId" name="userlineId" disabled >
                 </div>
                 <div class="mb-4">
                     <!-- ฟิลด์สำหรับใส่ชื่อ-สกุล -->
@@ -245,7 +245,61 @@ async function sendFlexMessage() {
     };
   // comment เพื่อไม่ต้องส่งข้อความผ่าน Flex
   //  await liff.sendMessages([flexMessage]); // ส่งข้อความ Flex ผ่าน LIFF
+ 	const htmlMessage = convertFlexToHTML(flexMessage);
+ 	console.log(htmlMessage);
 }
+//convert flexmessage to html to send via telegram
+function convertFlexToHTML(flexMessage) {
+  const contents = flexMessage.contents;
+  let html = '';
+
+  if (contents && contents.header && contents.header.contents) {
+    const headerText = contents.header.contents.find(item => item.type === 'text');
+    if (headerText) {
+      html += `<div style="text-align: center; background-color: #f0f0f0; padding: 10px;"><b>${escapeHTML(headerText.text)}</b></div><br>`;
+    }
+  }
+
+  if (contents && contents.body && contents.body.contents) {
+    html += '<div>';
+    contents.body.contents.forEach(box => {
+      if (box.type === 'box' && box.layout === 'horizontal' && box.contents) {
+        box.contents.forEach((item, index) => {
+          if (item.type === 'text') {
+            const textAlign = index === 0 ? 'left' : 'right';
+            const fontWeight = index === 0 ? 'normal' : 'bold';
+            html += `<div style="display: inline-block; width: 50%; text-align: ${textAlign}; font-weight: ${fontWeight}; margin-bottom: 5px;">${escapeHTML(item.text)}</div>`;
+          }
+        });
+        html += '<div style="clear: both;"></div>'; // Clear float
+      }
+    });
+    html += '</div><br>';
+  }
+
+  if (contents && contents.footer && contents.footer.contents) {
+    const footerText = contents.footer.contents.find(item => item.type === 'text');
+    if (footerText) {
+      html += `<div style="text-align: center; background-color: #f0f0f0; padding: 5px; color: #aaaaaa; font-size: small;">${escapeHTML(footerText.text)}</div>`;
+    }
+  }
+
+  return html;
+}
+
+function escapeHTML(text) {
+  return text.replace(/[&<>"']/g, function(match) {
+    switch (match) {
+      case '&': return '&amp;';
+      case '<': return '&lt;';
+      case '>': return '&gt;';
+      case '"': return '&quot;';
+      case "'": return '&#39;';
+      default: return match;
+    }
+  });
+}
+
 
 // กำหนดตัวแปรสำหรับใช้ในฟังก์ชันต่างๆ
 let url = `${WEB_APP_URL}`;
