--- a/register.html
+++ b/register.html
@@ -181,7 +181,7 @@ async function sendFlexMessage() {
                                         flex: 2
                                     }
                                 ]
-                            },
+                            }, <!--
                             {
                                 type: 'box',
                                 layout: 'horizontal',
@@ -202,7 +202,7 @@ async function sendFlexMessage() {
                                         flex: 2
                                     }
                                 ]
-                            },
+                            }, -->
                             {
                                 type: 'box',
                                 layout: 'horizontal',
@@ -245,8 +245,20 @@ async function sendFlexMessage() {
     };
   // comment เพื่อไม่ต้องส่งข้อความผ่าน Flex
   //  await liff.sendMessages([flexMessage]); // ส่งข้อความ Flex ผ่าน LIFF
- 	const htmlMessage = convertFlexToHTML(flexMessage);
- 	console.log(htmlMessage);
+  const webhookUrl = 'https://script.google.com/macros/s/AKfycbyIXHsuwDB99Bc-Y2gpcbdPR0SPyqioPsxS2oE2oy2rNPzm7KIybRnOQQl6E50--Q2L/exec'; // app script สำหรับส่งผ่าน telegram
+
+  const payload = JSON.stringify({
+    flexMessage: flexMessage,
+    chatId: document.getElementById('keynumber2Id').value // ส่ง chatId แยกออกมา
+  });
+
+  const options = {
+    method: 'post',
+    contentType: 'application/json',
+    payload: payload
+  };
+
+  UrlFetchApp.fetch(webhookUrl, options);	
 }
 //convert flexmessage to html to send via telegram
 function convertFlexToHTML(flexMessage) {
