--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
                 <div class="flex flex-col">
                 <div class="mb-4">
                     <!-- ฟิลด์สำหรับใส่ Line ID -->
-                    <input type="text" class="input-field w-full  bg-slate-200 p-2 text-slate-500 text-sm text-center rounded-lg" id="userlineId" placeholder="lineId" name="userlineId" disabled >
+                    <input type="text" class="input-field w-full  bg-slate-200 p-2 text-slate-500 text-sm text-center rounded-lg" id="userlineId" placeholder="lineId" name="userlineId"  >
                 </div>
                 <div class="mb-4">
                     <!-- ฟิลด์สำหรับใส่ชื่อ-สกุล -->
