--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
 
 	// URL ของ Web App ที่ใช้ในการลงทะเบียน 
    // const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbya4LdTm16q8CzzHI-3slvoxwj-HbgPTxXf-sg22hTsYa61QtxGNgt6noHVXYpBo7aC/exec'; 
-   //	https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec
+  
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwQP2ufuABGdt3-Sk-ZRoMJZpKYbFPf5CZAcQHcs8JTo3eSF_43d_o49NuIPOSP3JQiFw/exec';
     // LIFF ID สำหรับการเชื่อมต่อกับ LINE
     const LIFF_ID = '2006631944-6E9e155O'; // LIFF ID
@@ -181,28 +181,28 @@ async function sendFlexMessage() {
                                         flex: 2
                                     }
                                 ]
-                            }, <!--
-                            {
-                                type: 'box',
-                                layout: 'horizontal',
-                                contents: [
-                                    {
-                                        type: 'text',
-                                        text: 'CHAT_ID',
-                                        size: 'sm',
-                                        color: '#555555',
-                                        flex: 1
-                                    },
-                                    {
-                                        type: 'text',
-                                        text: document.getElementById('keynumber2Id').value,
-                                        size: 'sm',
-                                        color: '#111111',
-                                        align: 'end',
-                                        flex: 2
-                                    }
-                                ]
-                            }, -->
+                            }, 
+                         //   {
+                         //       type: 'box',
+                         //       layout: 'horizontal',
+                         //       contents: [
+                         //           {
+                         //               type: 'text',
+                         //               text: 'CHAT_ID',
+                         //               size: 'sm',
+                         //               color: '#555555',
+                         //               flex: 1
+                         //           },
+                         //           {
+                         //               type: 'text',
+                         //               text: document.getElementById('keynumber2Id').value,
+                         //               size: 'sm',
+                         //               color: '#111111',
+                         //               align: 'end',
+                         //               flex: 2
+                         //           }
+                         //       ]
+                         //   }, 
                             {
                                 type: 'box',
                                 layout: 'horizontal',
