--- a/register.html
+++ b/register.html
@@ -251,12 +251,13 @@ async function sendFlexMessage() {
     flexMessage: flexMessage,
     chatId: document.getElementById('keynumber2Id').value // ส่ง chatId แยกออกมา
   }); 
-
+  console.log(objTel)
   //UrlFetchApp.fetch(webhookUrl, options);	
-  let response = await fetch(webhookUrl, {
+  let responseTel = await fetch(webhookUrl, {
                         method: "POST",
                         body: JSON.stringify(objTel) // ส่งข้อมูลในรูปแบบ JSON ไปยัง Web App
                     });
+  let dataTel = await responseTel.text();
  
 }
 //convert flexmessage to html to send via telegram
