--- a/checkin.html
+++ b/checkin.html
@@ -642,7 +642,7 @@
             },
         };
 
-        await liff.sendMessages([flexMessage]);
+       // await liff.sendMessages([flexMessage]);
         liff.closeWindow(); // Close the LIFF window
     }
 
