--- a/checkin.html
+++ b/checkin.html
@@ -411,7 +411,7 @@
                     lat: latitudeInput.value,
                     long: longitudeInput.value,
                     address: fullAddressInput.value,
-                    user: userId.value
+                    user: userId.value,
                     chatID : columnDData.value
                 };
                 fetch(url, {
