--- a/checkin.html
+++ b/checkin.html
@@ -289,6 +289,7 @@
     const fullAddressInput = document.querySelector("#fullAddressInput");
     const userId = document.querySelector("#userId");
     const preview = document.getElementById('preview');
+    const chatID = document.querySelector("#columnDData");
 
     document.addEventListener("DOMContentLoaded", function () {
         const video = document.getElementById("camera-preview");
