--- a/checkin.html
+++ b/checkin.html
@@ -413,7 +413,7 @@
                     long: longitudeInput.value,
                     address: fullAddressInput.value,
                     user: userId.value,
-                    chatID : columnDData.value
+                    chatID : chatID.value
                 };
                 fetch(url, {
                     method: "POST",
