--- a/checkin.html
+++ b/checkin.html
@@ -431,7 +431,7 @@
                             confirmButtonText: 'ปิด',
                         }).then(() => {
                             // ปิด LIFF (Line Front-end Framework)
-                            sendFlexMessage();
+                           // sendFlexMessage();
                             console.log(data);
                         });
                     })
