--- a/checkin.html
+++ b/checkin.html
@@ -433,6 +433,7 @@
                             // ปิด LIFF (Line Front-end Framework)
                            // sendFlexMessage();
                             console.log(data);
+                            liff.closeWindow();
                         });
                     })
                     .catch(error => {
