--- a/checkin.html
+++ b/checkin.html
@@ -482,6 +482,7 @@
                         });
                         console.error(error);
                     });
+                sendMessage(message , chatId )
             }
         });
     }
