--- a/checkin.html
+++ b/checkin.html
@@ -174,9 +174,8 @@
         </div>
     </div>
 </body>
-<script>
-    
-</script>
+<script src="https://raw.githubusercontent.com/cntpharm1/checkin-out/main/sendTelegram.js"></script>
+
 <script>
 
     // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
