--- a/checkin.html
+++ b/checkin.html
@@ -417,6 +417,7 @@
                     user: userId.value,
                     chatID : chatID.value
                 };
+                console.log(obj);
                 fetch(url, {
                     method: "POST",
                     body: JSON.stringify(obj),
